--- a/week2/html/styles/style.css
+++ b/week2/html/styles/style.css
@@ -1,9 +1,9 @@
 body {
-    padding-left: 11em;
+    padding-left: 10em;
     font-family: Georgia, "Times New Roman", Times, serif;
 
     color: rgb(0,0,0);
-    background-image: url(swiss1.jpg); 
+    background-image: url(images/swiss1.jpg);
     background-repeat: no-repeat;
     background-position: right top;
     background-color: #FFFFCC }
@@ -32,6 +32,7 @@ h1 {
     color: purple }
 
 address {
+  position: relative; top:2em; left:0;
   margin-top: 1em;
   padding-top: 1em;
   border-top: thin dotted;
@@ -39,10 +40,11 @@ address {
 
   .styled_with_border
     { font-family: Arial, Helvetica, sans-serif;
+    width: 30em;
     text-align: justify;
     border-style: solid;
     border-color: #4289b5;
-    border-width: 2px 3em;
+    border-width: 2.5px 2em;
     margin-right: 1em;
     margin-left: 1em;
     padding-right: 1em;
